# cpp2

./: .gitignore  CMakeLists.txt  average_temperature.cpp  blocks_weight.cpp  build_expression.cpp  build_expression_cool.cpp  bus_stops1_decomposition.cpp  element_reference.cpp  figures.cpp  find_greater_elements.cpp  find_nearest_element.cpp  find_starts_with_char.cpp  find_starts_with_string.cpp  inheritance.cpp  matrix_sum.cpp  merge_sort_div2.cpp  merge_sort_div3.cpp  notifiers.cpp  person_names.cpp  print_permutations.cpp  print_stats.cpp  print_vector_part.cpp  refactoring.cpp  region_base.cpp  remove_duplicates.cpp  split_into_words.cpp  sqr_all.cpp  team_tasks.cpp  test_equation.cpp  test_palindrome.cpp  test_person.cpp  test_rational.cpp
bus_stops/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
course_project/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  project_template.cpp
phone_number/: CMakeLists.txt  main.cpp  phone_number.cpp  phone_number.h
sum_reverse_sort/: CMakeLists.txt  main.cpp  sum_reverse_sort.cpp
test_runner/: test_runner.h
