cmake_minimum_required (VERSION 3.0.0)

set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "-std=c++17 -std=gnu++17")

project (course)
add_executable(	course
				#main.cpp)
                #matrix_sum.cpp)
                #average_temperature.cpp)
                #blocks_weight.cpp)
                #region_base.cpp)
                #team_tasks.cpp)
                #sqr_all.cpp)
                #element_reference.cpp)
                bus_stops1_decomposition.cpp)
